@@ -1117,6 +1117,7 @@
 16) kernel: net: tcp: don't abort splice() after small transfers.<br>
 17) kernel: net: tcp: splice: fix an infinite loop in tcp_read_sock().<br>
 18) kernel: net: tcp: remove obsolete check in tcp_set_skb_tso_segs().<br>
+19) kernel: net: fq_codel: fix return value of fq_codel_drop().<br>
 <br>
 <br>
 <b>TODO:</b><br>
